# eventsourcingdb-client-python

./: .editorconfig  .gitignore  .pylintrc  LICENSE.md  Makefile  README.md  __init__.py  pyproject.toml  pytest.ini  setup.py
.github/: .dependabot.yml  CODEOWNERS  dependabot.yml
.github/workflows/: dependabot-poetry-lock.yml  lint-pr-title.yml  publish-pypi-package.yml  qa.yml  release.yml  update-poetry-lock.yml
eventsourcingdb/: __init__.py  abstract_base_client.py  bound.py  client.py  client_configuration.py  client_options.py  container.py  is_event.py  is_heartbeat.py  is_stream_error.py  is_valid_server_header.py  json_encoder.py  pandas.py  parse_raw_message.py  py.typed
eventsourcingdb/errors/: __init__.py  client_error.py  internal_error.py  invalid_parameter_error.py  server_error.py  validation_error.py
eventsourcingdb/event/: __init__.py  event.py  event_candidate.py  event_context.py  source.py  validate_subject.py  validate_type.py
eventsourcingdb/handlers/: bound.py  is_event.py  is_item.py  is_stream_error.py  lower_bound.py  ping.py  store_item.py  upper_bound.py
eventsourcingdb/http_client/: __init__.py  execute_request.py  get_error_message.py  get_get_headers.py  get_post_headers.py  http_client.py  response.py  validate_response.py
eventsourcingdb/observe_events/: __init__.py  if_event_is_missing_during_observe.py  observe_events_options.py  observe_from_latest_event.py
eventsourcingdb/read_event_types/: __init__.py  event_type.py  is_event_type.py
eventsourcingdb/read_events/: __init__.py  if_event_is_missing_during_read.py  order.py  read_events_options.py  read_from_latest_event.py
eventsourcingdb/read_subjects/: __init__.py  is_subject.py
eventsourcingdb/util/: get_randomized_duration.py  is_non_negativ_integer.py
eventsourcingdb/write_events/: __init__.py  preconditions.py
eventsourcingdb_client_python/: __init__.py  abstract_base_client.py  client.py  client_configuration.py  client_options.py  http_client.py  internal_exception.py  server_exception.py
eventsourcingdb_client_python/errors/: client_error.py  custom_error.py  internal_error.py  invalid_parameter_error.py  server_error.py  validation_error.py
eventsourcingdb_client_python/event/: event.py  event_candidate.py  event_context.py  source.py  tracing.py  validate_subject.py  validate_type.py
eventsourcingdb_client_python/exceptions/: client_exception.py  server_exception.py
eventsourcingdb_client_python/handlers/: if_event_is_missing.py  is_event.py  is_heartbeat.py  is_item.py  is_stream_error.py  lower_bound.py  parse_raw_message.py  ping.py  upper_bound.py
eventsourcingdb_client_python/http_client/: http_client.py  response.py
examples/: read_events_with_cancellation.py
tests/: conftest.py  test_events_to_dataframe.py  test_http_client.py  test_observe_events.py  test_ping.py  test_read_event_type.py  test_read_event_types.py  test_read_events.py  test_read_subjects.py  test_register_event_schema.py  test_register_event_type.py  test_run_eventql_query.py  test_verify_api_token.py  test_write_events.py
tests/event/: test_verify_hash.py  (+1 more)
(+63 files in other folders)
