[project]
name = "eventsourcingdb"
version = "1.5.1"
description = "The official Python client SDK for EventSourcingDB."
authors = [{ name = "the native web GmbH", email = "hello@thenativeweb.io" }]
requires-python = ">=3.11, <=3.13"
readme = "README.md"
license = "MIT"
dependencies = [
    "aiohttp==3.12.15",
    "testcontainers==4.13.0",
]

[dependency-groups]
dev = [
    "pytest==8.4.2",
    "pytest-timeout==2.4.0",
    "pytest-asyncio==1.2.0",
    "pytest-cov==7.0.0",
    "ruff==0.12.12",
    "bandit==1.8.6",
    "pyright==1.1.405",
    "twine==6.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  

[tool.hatch.build.targets.wheel]
packages = ["eventsourcingdb"]

[tool.hatch.build.targets.sdist]
include = ["eventsourcingdb/**/*.py", "eventsourcingdb/py.typed"]

[tool.pytest.ini_options]
timeout = 30
asyncio_default_fixture_loop_scope = "function"
