[project]
name = "eventsourcingdb"
version = "1.9.0"
description = "The official Python client SDK for EventSourcingDB."
authors = [{ name = "the native web GmbH", email = "hello@thenativeweb.io" }]
requires-python = ">=3.11, <3.15"
readme = "README.md"
license = "MIT"
dependencies = [
    "aiohttp==3.13.2",
    "cryptography==46.0.3",
    "testcontainers==4.13.3",
]

[dependency-groups]
dev = [
    "pytest==9.0.1",
    "pytest-timeout==2.4.0",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "ruff==0.14.7",
    "bandit==1.9.2",
    "pyright==1.1.407",
    "twine==6.2.0",
    "pandas>=2.0.0",
]
pandas = [
    "pandas>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]

[tool.hatch.build.targets.wheel]
packages = ["eventsourcingdb"]

[tool.hatch.build.targets.sdist]
include = ["eventsourcingdb/**/*.py", "eventsourcingdb/py.typed"]

[tool.pytest.ini_options]
timeout = 30
asyncio_default_fixture_loop_scope = "function"
